--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -240,7 +240,7 @@
                     <!-- /.cart_icon -->
 
                     <div class="cart_icon">
-                        <img src="./img/icon/Влажная уборка.svg" alt="img" class="cart_img">
+                        <img src="./img/icon/Влажнаяуборка.svg" alt="img" class="cart_img">
                         <h4 class="title__cart">
                             Влажная уборка
                         </h4>
@@ -464,7 +464,7 @@
         <section class="contact_maps">
             <div class="container">
                 <div class="map">
-                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad1f158f9f45a169c0abe09fe9589a650fee8d8a563c1579726d1dcacebfeb0b9&amp;source=constructor" width="1230" height="503" frameborder="0"></iframe>
+                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad1f158f9f45a169c0abe09fe9589a650fee8d8a563c1579726d1dcacebfeb0b9&amp;source=constructor" width="1230" height="503" ></iframe>
                     <div class="block_cont">
                         <h3 class="title_contacts">
                             Контакты
